Fixes to logo and header
Logo no longer gets squished. Decreased sizes for mobile.

--- a/style.css
+++ b/style.css
@@ -724,8 +724,14 @@ textarea {
 
 .site-title {
 	margin: 0 0.5em 0 0;
-	font-size: 3em;
-	display: inline;
+	font-size: 2rem;
+}
+
+@media (min-width: 40rem) {
+	.site-title {
+		font-size: 3rem;
+		display: inline;
+	}
 }
 
 .site-title a {
@@ -739,21 +745,34 @@ textarea {
 	font-style: italic;
 }
 
+.site-branding {
+	flex-shrink: 0;
+}
+
 .custom-logo {
-	height: 10em;
+	height: 6em;
 	width: auto;
 	padding-right: 2rem;
+}
+
+@media (min-width: 40rem) {
+	.custom-logo {
+		height: 10em;
+	}
 }
 
 .site-header-scrolldown {
 	position: absolute;
 	bottom: 4rem;
-	left:0;right:0;
+	left:0;
+	right:0;
 	margin: 0 auto;
 
 	width: 4rem;
 	height: auto;
 }
+
+
 
 /* Navigation
 --------------------------------------------- */
